--- a/config/app-config.json
+++ b/config/app-config.json
@@ -31,7 +31,12 @@
     "/": {
       "call": "Polymorph\\Application\\ApplicationController::handleTemplateRequest",
       "template": "Polymorph/Application/templates/content.html.twig",
-      "pageTitle": "Availy"
+      "pageTitle": "Availy",
+      "element": "src/Availy/Application/elements/availy-calendar.html",
+      "elementData": {
+        "allocationsHref": "/data/allocations.json",
+        "vacationsHref": "/data/vacations.json"
+      }
     }
   }
 }
