--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 /.idea
-/.sass-cache
 /bower_components
 /node_modules
-/data
+/data/databases
+/data/vacations.json
+/data/allocations.json
 /dev/**/reports
 /nbproject
-/node_modules
 /vendor
 .DS_Store
 .htaccess
