--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "npm-fresh": "rm -rf ./node_modules && npm install",
     "bower-fresh": "rm -rf ./bower_components && bower install",
     "bower-fresh-o": "rm -rf ./bower_components && bower install -o",
-    "php-serve": "php -S 0.0.0.0:8889 dev/e2e/php-router.php",
+    "app": "php -S 0.0.0.0:8889 dev/e2e/php-router.php",
     "test-e2e": "./node_modules/.bin/karma start dev/e2e/config/karma.conf.js",
     "test-js": "./node_modules/.bin/karma start dev/js-specs/config/karma.conf.js"
   },
